--- a/pom.xml
+++ b/pom.xml
@@ -1,54 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- Elemen root dari file POM -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
+	<!-- Versi model POM yang digunakan -->
 	<modelVersion>4.0.0</modelVersion>
+	
+	<!-- Konfigurasi POM induk untuk Spring Boot -->
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.0.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
+	
+	<!-- Informasi dasar proyek -->
 	<groupId>net.javaguides</groupId>
 	<artifactId>student-management-system</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>student-management-system</name>
-	<description>Student Management System using Spring Boot and Thymeleaf</description>
+	<description>Student Management System menggunakan Spring Boot </description>
+	
+	<!-- Properti yang digunakan dalam proyek -->
 	<properties>
+		<!-- Versi Java yang digunakan -->
 		<java.version>17</java.version>
 	</properties>
+	
+	<!-- Dependensi yang dibutuhkan oleh proyek -->
 	<dependencies>
+		<!-- Starter untuk menggunakan Spring Data JPA untuk akses data -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
+		<!-- Starter untuk menggunakan Thymeleaf sebagai mesin template -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
+		
+		<!-- Starter untuk membangun aplikasi web menggunakan Spring MVC -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+		<!-- Alat pengembangan untuk Spring Boot, termasuk live reload -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
-		<!-- <dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
-		</dependency>-->
-
-		<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+		
+		<!-- Dependensi untuk menggunakan database H2, sebuah database dalam memori -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- Starter untuk pengujian dengan Spring Boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -56,8 +70,10 @@
 		</dependency>
 	</dependencies>
 
+	<!-- Konfigurasi proses build proyek -->
 	<build>
 		<plugins>
+			<!-- Plugin untuk membangun aplikasi Spring Boot -->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
